Tue Apr 29 10:58:45 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Removed unused argument and moved the setting of a flag to the
          end of the method in which it appears more than once, so that
          the second check will not return a bogus value. Also changed
          the logic so nested anonymous sequences (such as
          sequence<sequence<short> >) will get one and only one explicit
          instantiation, even if it is used more than once in a translation
          unit.

Tue Apr 29 16:13:46 2003  Simon McQueen  <sm@prismtechnologies.com>

	* tests/Abstract_Interface/client.cpp: Fixed build error.

Tue Apr 29 14:47:40 2003  Dave Smith  <dts@prismtechnologies.com>

	* tao/IOP_IORC.h:
	* tao/diffs/IOP_IOR.diff:

          Removed clash with symbol "IOR" defined in
          /usr/include/machine/inline.h on HPUX.

Mon Apr 28 18:09:43 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_home.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:

          Fixed code generation for home-related interfaces.

Mon Apr 28 17:35:22 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_sequence.cpp:
        * TAO_IDL/be/be_visitor_sequence/sequence_ch.cpp:
        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Changed generated code in several places to be "CORBA::OctetSeq"
          instead of "TAO_Unbounded_Sequence<CORBA::Octet>".

Mon Apr 28 18:59:01 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/Generic_Servant/Makefile:
        * examples/POA/Generic_Servant/Makefile.client:
        * examples/POA/Generic_Servant/Makefile.generic_servant:
          Splitted original makefile into three, to resolve link problems with
          MinGW and Cygwin.

Mon Apr 28 12:24:39 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao/Strategies/advanced_resource.cpp:

	  load_default_protocols(): Reset